@@ -1,3 +1,8 @@
+2007-12-14  Neal H. Walfield  <neal@gnu.org>
+
+	* as.c (allocate_object): Correctly save and return the shadow
+	object.
+
 2007-12-13  Neal H. Walfield  <neal@gnu.org>
 
 	* storage.c (storage_alloc_): Update to folio_object_alloc's
